<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="at.fibuszene.singlescreenapp.MainActivity">

    <ImageView
        android:id="@+id/headerImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/cd_logo"
        android:scaleType="fitStart"
        android:src="@drawable/header" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_below="@+id/headerImage"
        android:background="@color/divider_color" />

    <ScrollView
        android:id="@+id/contentScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/divider"
        android:background="@color/background"
        android:paddingLeft="@dimen/activity_horizontal_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/tagLine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/company_tagline"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                    android:textColor="@color/colorAccent" />
            </LinearLayout>

            <TextView
                android:id="@+id/aboutUs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:text="@string/about_us"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/company_description"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                android:textColor="@color/black" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:text="@string/history_description"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                android:textColor="@color/black" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/divider_color" />

            <TextView
                android:id="@+id/businessHoursTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:minHeight="@dimen/min_height"
                android:text="@string/businesshours"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TableLayout
                android:id="@+id/businesshours"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/clickablePadding"
                android:stretchColumns="0,1,2">

                <TableRow>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/monday"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                        android:textColor="@color/black" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/eightthirty"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                        android:textColor="@color/black" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/five"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                        android:textColor="@color/black" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tuesday"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                        android:textColor="@color/black" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/eightthirty"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                        android:textColor="@color/black" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/five"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                        android:textColor="@color/black" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/wednesday"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                        android:textColor="@color/black" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/eightthirty"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                        android:textColor="@color/black" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/five"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                        android:textColor="@color/black" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/thursday"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                        android:textColor="@color/black" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/eightthirty"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                        android:textColor="@color/black" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/five"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                        android:textColor="@color/black" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/friday"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                        android:textColor="@color/black" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/eightthirty"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                        android:textColor="@color/black" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/five"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                        android:textColor="@color/black" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/saturday"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                        android:textColor="@color/black" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/eightthirty"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                        android:textColor="@color/black" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/five"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                        android:textColor="@color/black" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/sunday"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                        android:textColor="@color/black" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_span="1"
                        android:gravity="center"
                        android:text="@string/closed"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                        android:textColor="@color/black" />


                </TableRow>

            </TableLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/clickablePadding">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@android:drawable/ic_menu_week" />

                <TextView
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autoLink="phone"
                    android:text="@string/phonenumber"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                    android:textColor="@color/black" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/divider_color" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/clickablePadding">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@android:drawable/ic_menu_week" />

                <TextView
                    android:id="@+id/mail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autoLink="email"
                    android:text="@string/emailadress"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                    android:textColor="@color/black" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_below="@+id/headerImage"
                android:background="@color/divider_color" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/clickablePadding">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@android:drawable/ic_menu_week" />

                <TextView
                    android:id="@+id/map"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autoLink="map"
                    android:text="@string/location"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                    android:textColor="@color/black" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/divider_color" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/clickablePadding">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@android:drawable/ic_menu_week" />

                <TextView
                    android:id="@+id/web"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autoLink="web"
                    android:text="@string/web"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                    android:textColor="@color/black" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/divider_color" />
        </LinearLayout>


    </ScrollView>

</RelativeLayout>
